--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
 
     <div class="container photo">
-      <img src="https://github.com/OliviaBensimon/HTML-Refresh/images/skyline.jpeg" alt="a picture" />
+      <img src="/Users/oliviabensimon/coding/HTML-Refresh/\images/skyline.jpeg" alt="a picture" />
     </div>
 
     <div class="container">
