--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
 
     <div class="container photo">
-      <img src="/Users/oliviabensimon/coding/HTML-Refresh/\ images/skyline.jpeg" alt="a picture" />
+      <img src="images/skyline.jpeg" alt="a picture" />
     </div>
 
     <div class="container">
@@ -95,13 +95,13 @@
     <div class="container photo">
       <div class="flex">
         <div class="flex-image">
-          <img src="/Users/oliviabensimon/coding/HTML-Refresh/\ images/food.jpeg" />
+          <img src="images/food.jpeg" />
         </div>
         <div class="flex-image">
-          <img src=" /Users/oliviabensimon/coding/HTML-Refresh/\ images/lights.jpeg " />
+          <img src="images/lights.jpeg" />
         </div>
         <div class="flex-image">
-          <img src="/Users/oliviabensimon/coding/HTML-Refresh/\ images/sign.jpeg" />
+          <img src="images/sign.jpeg" />
         </div>
       </div>
     </div>
