--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
     <!-- Your javascript should be called here -->
 
-    <footer class="container" id="footer"> Olivia Bensimon for Coding the News, Spring 2021 </footer>
+    <footer class="container" id="footer"> Olivia Bensimon, for Coding the News, Spring 2021 </footer>
 
   </body>
 
